--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,20 @@
-.App {
-  margin: 1rem;
-  font-family: Arial, Helvetica, sans-serif;
+@import './styles/variables.scss';
+
+html, body, #root {
+  margin: 0;
+  height: 100%;
+}
+
+.container {
+  margin: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  font-family: Calibri, Helvetica, Arial, sans-serif;
+
+  .main-content {
+    flex: 1;
+    background: $main-content-background-color;
+    color: $page-default-font-color;
+  }
 }
