add placeholders for all other pages

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,7 @@ html, body, #root {
 
   .main-content {
     flex: 1;
+    display: flex;
     background: $main-content-background-color;
     color: $page-default-font-color;
   }
