--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,5 @@
+$mobile-screen-breakpoint: 800px;
+
 $page-default-font-color: #fff;
 $page-default-font-hover-color: #ccc;
 
@@ -6,3 +8,7 @@ $navbar-link-hover-text-color: #86c232;
 $navbar-link-hover-background-color: #6b6e70;
 
 $main-content-background-color: #222629;
+
+$text-accent-color-green: #86c232;
+$text-accent-color-orange: #ffbf00;
+$text-accent-color-red: #b60000;
