--- a/src/App.scss
+++ b/src/App.scss
@@ -13,9 +13,22 @@ html, body, #root {
   font-family: Calibri, Helvetica, Arial, sans-serif;
 
   .main-content {
+    position: relative;
     flex: 1;
     display: flex;
     background: $main-content-background-color;
     color: $page-default-font-color;
+    z-index: 1;
+
+    .bg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: url('./img/home_source_screenshot2.png'); 
+      filter: blur(8px);
+      z-index: -1;
+    }
   }
 }
