--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,5 @@
-$mobile-screen-breakpoint: 800px;
+$screen-breakpoint-small: 800px;
+$screen-breakpoint-medium: 1280px;
 
 $page-default-font-color: #fff;
 $page-default-font-hover-color: #ccc;
