--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -14,7 +14,7 @@
   }
 }
 
-@media screen and (max-width: $mobile-screen-breakpoint) {
+@media screen and (max-width: $screen-breakpoint-small) {
   .about-container {
     .text-section {
       margin: 4rem 2rem 0;
