--- a/src/components/Technologies/Technologies.scss
+++ b/src/components/Technologies/Technologies.scss
@@ -2,16 +2,19 @@
 
 .tech-container {
   flex: 1;
+  padding: 4rem;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 
   .section {
-    margin: 1rem;
+    margin: 1rem 2rem;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
+    font-size: 1.5rem;
 
     .section {
       flex: 1;
@@ -21,20 +24,50 @@
       padding: .5rem 1rem;
       width: 100%;
       height: fit-content;
-      background: $text-accent-color-green;
+      font-size: 2rem;
+      border-bottom: .5rem solid $text-accent-color-green;
       white-space: nowrap;
     }
 
     .items {
-      padding: 0.5rem;
+      padding: 0 1rem;
+      min-width: 18rem;
 
       .item {
-        padding-left: 1rem;
+        margin-left: 1rem;
+
+        >.item {
+          position: relative;
+          padding-left: 0.5rem;
+          border-left: 0.2rem solid $text-accent-color-orange;
+
+          &::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            top: 50%;
+            height: 0.2rem;
+            width: 0.3rem;
+            background: $text-accent-color-orange;
+          }
+        }
       }
 
       >.item >.item-label {
         font-weight: bold;
       }
     }
+  }
+}
+
+@media screen and (max-width: $screen-breakpoint-medium) {
+  .tech-container {
+    padding: 4rem;
+  }
+}
+
+@media screen and (max-width: $screen-breakpoint-small) {
+  .tech-container {
+    padding: 2rem;
   }
 }
