--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -31,11 +31,17 @@
       .navbar-link {
         position: relative;
         flex: 1;
-        padding: 1rem;
         font-size: 1.2rem;
         color: $page-default-font-color;
         text-align: center;
         cursor: pointer;
+
+        a {
+          padding: 1rem;
+          display: block;
+          color: inherit;
+          text-decoration: inherit;
+        }
 
         &.active::after {
           content: "";
