--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -22,22 +22,23 @@
     }
 
     .education-entry {
+      margin: 2rem 0;
       padding-left: 1rem;
 
       .education-header {
         margin-top: 1rem;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        //display: flex;
+        //justify-content: space-between;
+        //align-items: center;
 
         .education-name {
           font-weight: bold;
         }
 
         .education-details {
-          display: flex;
-          flex-direction: column;
-          align-items: flex-end;
+          //display: flex;
+          //flex-direction: column;
+          //align-items: flex-end;
 
           span {
             align-items: flex-end;
