--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -21,7 +21,7 @@
   }
 
   .center-banner {
-    margin-bottom: 6rem;
+    margin: 6rem 0;
     text-align: center;
     font-size: 3rem;
 
@@ -32,7 +32,7 @@
   }
 
   .banner-section {
-    margin-top: 3rem;
+    margin: 3rem 0.5rem;
     text-align: center;
     font-size: 2rem;
   }
