--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -12,9 +12,10 @@
     padding: 0.5rem;
     flex: 1;
 
-    img {
+    .home-logo {
       height: 6rem;
       width: 6rem;
+      cursor: pointer;
     }
   }
 
