--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -22,8 +22,14 @@
         z-index: 2;
       }
 
+      &.inline {
+        .job-card {
+          width: unset !important;
+        }
+      }
+
       .job-card {
-        margin: 1rem;
+        padding: 1rem;
         width: 35rem;
 
         h3 {
@@ -49,7 +55,7 @@
     }
 
     .event-card {
-      margin: 1rem;
+      padding: 0 1rem;
       width: 20rem;
     }
   }
@@ -58,6 +64,7 @@
 @media screen and (max-width: $screen-breakpoint-medium) {
   .experience-container {
     padding: 4rem;
+    
 
     .experience-timeline {
       .scaled-timeline-entry {
@@ -72,6 +79,7 @@
 @media screen and (max-width: $screen-breakpoint-small) {
   .experience-container {
     padding: 2rem;
+    width: 100%;
 
     .experience-timeline {
       .scaled-timeline-entry {
