allow timeline scroll

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,7 @@ html, body, #root {
     justify-content: center;
     background: $main-content-background-color;
     color: $page-default-font-color;
+    overflow: auto;
     z-index: 1;
 
     .bg {
