--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -13,3 +13,6 @@ $main-content-background-color: #222629;
 $text-accent-color-green: #86c232;
 $text-accent-color-orange: #ffbf00;
 $text-accent-color-red: #b60000;
+
+$button-primary-background-color: #86c232;
+$button-primary-background-color-active: #72a629;
