add redux-thunk, move recaptcha validation to action

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -27,6 +27,10 @@
                 
                 border: none;
                 border-radius: 0.25rem;
+
+                &:disabled {
+                    background: #ccc;
+                }
             }
 
             textarea {
