enhance contact form UX

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -56,7 +56,7 @@
 }
 
 .email-link {
-    color: $page-default-font-color;
+    color: $text-accent-color-orange;
 
     &:hover, &:active {
         color: $navbar-link-hover-text-color;
