--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -16,3 +16,5 @@ $text-accent-color-red: #b60000;
 
 $button-primary-background-color: #86c232;
 $button-primary-background-color-active: #72a629;
+
+$link-hover-text-color: #86c232;
