--- a/src/App.scss
+++ b/src/App.scss
@@ -23,7 +23,7 @@ html, body, #root {
     z-index: 1;
 
     .bg {
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
       right: 0;
